rwd: full-bleed utility + container gutters + mobile fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <section class="section-two-col">
    <div class="figure_1">
 
-   <img src="images/dance.png" alt="oc">
+   <img class="full-bleed" src="images/dance.png" alt="oc">
    </div>
    <div class="info">
     <h2>論文徵選即將開始!</h2>
