--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
    <section class="section-two-col">
    <div class="figure_1">
 
-   <img src="images/20251006_2026mainimage.png" alt="oc">
+   <img src="./images/20251006_2026mainimage.png" alt="image">
+
    </div>
    <div class="info">
     <h2>論文徵選即將開始!</h2>
