--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
    <main>
    <section class="section-two-col">
    <div class="figure_1">
-
-   <img src="./images/20251006_2026mainimage.png" alt="image">
+   <img src="images/20251006_2026mainimage.png" alt="image">
 
    </div>
    <div class="info">
